--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -44,7 +44,8 @@
                         <i class="save icon"></i>
                         บันทึก
                       </button>
-                      <button class="ui mini primary button" (click)="determineRiskTotal()">
+                      <button class="ui mini primary button" (click)="configAllCondition()">
+                        <i class="setting icon"></i>
                         กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
                       </button>
                       <button class="ui mini primary button" (click)="cancelFlow()">
