--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -1,96 +1,144 @@
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>ประเมินค่าใช้จ่ายในการเดินทาง
-  </span>
-</div>
-<div class="ui form center aligned" id="int09-1" (submit)="onSubmitt()" ngNativeValidate>
-  <div class="ui attached  segment">
-    <div class="ui grid center aligned">
-      <div class="ui two wide column">&nbsp;</div>
-      <div class="ui center aligned thirteen wide  column">
-
-        <div class="inline fields">
-          <div class="three wide field">
-            <label>ชื่อกระดาษทำการ :</label>
-          </div>
-          <div class="eight wide field">
-            <input type="text" maxlength="1000" name="workSheetHeaderName">
-          </div>
-        </div>
-        <div class="inline fields">
-          <div class="three wide field">
-            <label>
-              ชื่อ (ผู้สร้าง) :
-            </label>
-          </div>
-          <div class="eight  wide field">
-            <input type="text" name="departmentName">
-          </div>
-        </div>
-        <div class="inline fields">
-          <div class="three wide field">
-            <label>วันที่ทำการ</label>
-          </div>
-          <div class="eight wide field">
-            <input type="text" class="disabled" name="description">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <br>
-
-
-    <div class="ui grid center aligned">
-      <div class="ui two wide column">&nbsp;</div>
-      <div class="ui center aligned thirteen wide  column">
-      </div>
-    </div>
-
-
-
-    <div class="ui center aligned grid">
-      <div class="eight wide column">
-        <button class="ui mini primary button" type="button" (click)="uploadData()">
-          ค้นหา
-        </button>
-        <button class="ui mini primary button" type="button" (click)="clearData()">
-          ล้างข้อมูล
-        </button>
-        <button class="ui mini primary button" type="button" routerLink="/int09/1/1">
-          เพิ่มข้อมูล
-        </button>
-
-      </div>
-    </div>
-    <br>
-
-
-    <br>
-    <div style="overflow-x: scroll;">
-      <table id="tableData" class="ui small celled table">
-        <thead>
-          <tr style="text-align: center;">
-            <th rowspan="2">ลำดับที่</th>
-            <th rowspan="2">ชื่อกระดาษทำการ</th>
-            <th rowspan="2">หน่วยงาน</th>
-            <th rowspan="2">วันที่</th>
-            <th rowspan="2">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let d of data; let i=index">
-            <td>{{d.workSheetHeaderId}}</td>
-            <td>{{d.workSheetHeaderName}}</td>
-            <td>{{d.departmentName}}</td>
-            <td>{{d.createdDatetime}}</td>
-            <td>
-              <button class="ui mini primary button" type="button" (click)="detailHeader(d.workSheetHeaderId)">รายละเอียด</button>
-              <button class="ui mini red button" type="button" (click)="deleteData(d.workSheetHeaderId)">ลบ</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <br>
+    <span>ค้นหาข้อมูลการเดินทาง</span>
   </div>
-</div>
+  <div class="ui form center aligned" id="int09-1"  ngNativeValidate>
+    <div class="ui attached  segment">
+      <input type="hidden" id="searchFlag">
+
+      <div class="inline fields"> 
+          <div class="two wide field"></div>
+          <div class="two wide field"><label>วันที่สร้าง</label></div>
+            <div class="four wide field">
+                <div class="ui calendar" id="date" style="width: 100%;">
+                    <div class="ui input left icon">
+                        <i class="time icon"></i>
+                        <input type="text" id="fiscalYearIn" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                    </div>
+                </div>
+            </div>   
+            <div class="two wide field"><label>ถึง</label></div>
+              <div class="four wide field">
+                  <div class="ui calendar" id="date2" style="width: 100%;">
+                      <div class="ui input left icon">
+                          <i class="time icon"></i>
+                          <input type="text" id="fiscalYearIn" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                      </div>
+                  </div>
+              </div>     
+        </div>
+        <div class="inline fields"> 
+            <div class="two wide field"></div>
+            <div class="two wide field"><label>ผู้สร้าง</label></div>
+              <div class="four wide field">
+                  <input type="text" maxlength="1000"  name="name" required>
+              </div>      
+          </div>
+      <div class="inline fields">
+          <input type="hidden" id="searchFlag">
+          <div class="two wide field"></div>
+          <div class="two wide field"><label>ปีงบประมาณ</label></div>
+          <div class="four wide field column">
+            <div class="ui calendar" id="date3" style="width: 100%;">
+            <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="date-raw" id="year1" autocomplete="off" [attr.readonly]="null" placeholder="ปปปป" [attr.required]="true">
+            </div>
+          </div>
+        </div>          
+        <div class="two wide field"><label>ลงวันที่</label></div>
+        <div class="four wide field">
+            <div class="ui calendar" id="date4" style="width: 100%;" >
+                <div class="ui input left icon">
+                    <i class="time icon"></i>
+                    <input type="text" id="fiscalYearIn" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                </div>
+            </div>
+        </div>  
+        </div>
+        <div class="inline fields"> 
+            <div class="two wide field"></div>
+            <div class="two wide field"><label>วันที่เดินทาง</label></div>
+              <div class="four wide field">
+                  <div class="ui calendar" id="date5" style="width: 100%;">
+                      <div class="ui input left icon">
+                          <i class="time icon"></i>
+                          <input type="text" id="fiscalYearIn" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                      </div>
+                  </div>
+              </div>   
+              <div class="two wide field"><label>วันที่ถึง</label></div>
+                <div class="four wide field">
+                    <div class="ui calendar" id="date6" style="width: 100%;">
+                        <div class="ui input left icon">
+                            <i class="time icon"></i>
+                            <input type="text" id="fiscalYearIn" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                        </div>
+                    </div>
+                </div>     
+          </div>
+          <div class="inline fields">
+              <div class="two wide field"></div>
+              <div class="two wide field"><label>สรรพสามิตภาค</label></div>
+              <div class="four wide field">
+                  <select class="ui dropdown search selection" style="width: 100%;" id="sector" (change)="sectorOnchange($event)">
+                      <option value="">เลือก</option>
+                      <option *ngFor="let data of sectorList" value="{{data.value}}">{{data.label}}</option>
+                  </select>
+              </div>                 
+              <div class="two wide field"><label>สรรพสามิตพื้นที่</label></div>
+              <div class="four wide field">
+                  <select class="ui dropdown search selection" style="width: 100%;" id="area" (change)="areaOnChange($event)">
+                      <option value="">เลือก</option>
+                      <option *ngFor="let data of areaDropdown" value="{{data.value}}">{{data.label}}</option>
+                  </select>
+              </div> 
+          </div>
+          <div class="inline fields">    
+              <div class="two wide field"></div>   
+              <div class="two wide field"><label>สรพพสามิตสาขา</label></div>
+              <div class="four wide field">
+                  <select class="ui dropdown search selection" style="width: 100%;" id="branch" >
+                      <option value="">เลือก</option>
+                      <option *ngFor="let data of branchDropdown" value="{{data.value}}">{{data.label}}</option>
+                  </select>
+              </div>
+          </div>
+  
+      <div class="ui center aligned grid">
+        <div class="eight wide column">
+          <button class="ui  primary button" type="button" (click)="clickSearch()">ค้นหา</button>
+          <button class="ui  grey button" type="button" (click)="clickClear()"> ล้างข้อมูล</button>
+          <button class="ui  green button" type="button" (click)="clickCreate()">สร้าง</button>
+        </div>
+      </div>
+      <br>
+  </div>
+</div>   
+  <br>
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>รายละเอียดการเดินทาง</span>
+    </div>
+    <div class="ui attached  segment">
+      <br>
+        <table id="tableData" class="ui small celled table nowrap" style="width: 100%" >
+          <thead>	
+
+            <tr>
+              <th style="text-align: center !important;">ลำดับที่</th>
+              <th style="text-align: center !important;">วันที่สร้าง</th>
+              <th style="text-align: center !important;">ผู้สร้าง</th>
+              <th style="text-align: center !important;">ปีงบประมาณ</th>
+              <th style="text-align: center !important;">ลงวันที่</th>
+              <th style="text-align: center !important;">วันที่เดินทาง</th>
+              <th style="text-align: center !important;">ถึงวันที่</th>
+              <th style="text-align: center !important;">เดินทางไป</th>
+              <th style="text-align: center !important;">สถานะการดำเนินการ</th>
+              <th style="text-align: center !important;width:180px !important">จัดการ</th>
+            </tr>
+
+          </thead>
+        </table>
+    </div>   
+     
+          
+    
