--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-2-3/int09-2-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-2-3/int09-2-2-3.component.html
@@ -1,24 +1,31 @@
 <!-- start step -->
+
 <div class="ui ordered steps" style="width: 100%;">
-    <div class="completed  step">
+    <div class="disabled step">
       <div class="content">
         <div class="title"></div>
         <div class="description">รายละเอียดหัวกระดาษทำการ</div>
       </div>
     </div>
-    <div class="active  step">
+    <div class="active step">
       <div class="content">
         <div class="title"></div>
-        <div class="description">หลักฐานการจ่ายเงิน (แบบ 8708 ส่วนที่ 2)</div>
+        <div class="description">หลักฐานการจ่ายเงิน <br>(แบบ 8708 ส่วนที่ 2)</div>
       </div>
     </div>
     <div class="disabled  step">
       <div class="content">
         <div class="title"></div>
-        <div class="description">ใบเบิกค่าใช้จ่ายฯ (แบบ 8708 ส่วนที่ 1)</div>
+        <div class="description">ใบเบิกค่าใช้จ่ายฯ <br>(แบบ 8708 ส่วนที่ 1)</div>
       </div>
     </div>
     <div class="disabled  step">
+        <div class="content">
+          <div class="title"></div>
+          <div class="description">เอกสารขอเบิก</div>
+        </div>
+      </div>
+      <div class="disabled  step">
         <div class="content">
           <div class="title"></div>
           <div class="description">แนบหลักฐาน</div>
@@ -32,32 +39,35 @@
     <div class="ui form center aligned" id="int09-1"  ngNativeValidate>
        
       <div class="ui attached  segment">
-        <div class="ui container center aligned ">
-            <p><b>ปะมาณการค่าใช้จ่ายในการเดินทางไปราชการ</b></p>
-            <p><b>หน่วยงาน กลุ่มตรวจสอบภายใน</b></p>
-            <p><b>เดินทางไปราชการที่ สำนักงานสรรพสามิตพื้นที่เลย</b></p>
-            <p><b>ตั้งแต่วันที่ 17 มิถุนายน 2561 - 30 มิถุนายน 2561</b></p>
+        <div class="ui container center aligned " >
+            <p><b>หลักฐานการจ่ายเงินค่าใช้จ่ายในการเดินทางไปราชการ</b></p>
+            <p><b>ชื่อส่วนราชการ {{stateAgencyNameHead}}   กรมสรรพสามิต   จังหวัดกรุงเทพมหานคร</b></p>
+            <p><b>ประกอบใบเบิกค่าใช้จ่ายในการเดินทางของ  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{thosePickedHead}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ลงวันที่ {{fiscalYearInHead}}</b></p>
         </div>
         <br><br>
-          <input type="hidden" id="idEdit">
+
+        <input type="hidden" id="id">
+        <input type="hidden" id="idProcess">
+        <input type="hidden" id="name">
+
         <div class="ui grid">
             <div class="three wide column ui right aligned"><label>คำนำหน้าชื่อ</label></div>
             <div class="three wide column">
               <select class="ui dropdown" id="prefix" name="prefix">
-                  <option value="">นาย</option>
+                  <option value="">เลือกคำนำหน้า</option>   
                   <option value="1">นาย</option>
                   <option value="2">นางสาว</option>
                   <option value="3">นาง</option>
               </select>
             </div>
             <div class="two wide column right aligned"><label>ชื่อ</label></div>
-            <div class="three wide column"><input id="name" type="text"></div>
+            <div class="three wide column"><input id="nameForm" type="text"></div>
             <div class="one wide column right aligned"><label>นามสกุล</label></div>
-            <div class="three wide column"><input id="last" type="text"></div>
+            <div class="three wide column"><input id="lastForm" type="text"></div>
         </div>
         <div class="ui grid">      
             <div class="three wide column right aligned"><label>ตำแหน่ง</label></div>
-            <div class="three wide column"><input type="text" id="position"></div>
+            <div class="three wide column"><input type="text" id="rank"></div>
             <div class="two wide column right aligned"><label>ประเภท</label></div>
             <div class="three wide column">
                 <select class="ui dropdown" id="type" name="type" (change)="typeDropdownOnChange($evnet)">
@@ -67,16 +77,16 @@
             </div>
             <div class="one wide column right aligned"><label>ระดับ</label></div>
             <div class="three wide column">
-                <select class="ui dropdown" id="level" name="level">
+                <select class="ui dropdown" id="grade" name="grade">
                     <option value="">เลือกระดับ</option>
-                    <option *ngFor="let data of levelDropdown" value="{{data.value}}">{{data.label}}</option> 
+                    <option *ngFor="let data of gradeDropdown" value="{{data.value}}">{{data.label}}</option> 
                 </select> 
             </div>     
         </div>      
         <div class="ui grid">
             <div class="three wide column ui right aligned"><label>วันขออนุญาต</label></div>
             <div class="three wide column">
-                <div class="ui calendar" id="appoveDate">
+                <div class="ui calendar" id="dateOfApplication">
                     <div class="ui input left icon">
                         <i class="time icon"></i>
                         <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
@@ -85,7 +95,7 @@
             </div>
             <div class="two wide column ui right aligned"><label>วันเขียนเบิก</label></div>
             <div class="three wide column">
-                <div class="ui calendar" id="withdrawDate">
+                <div class="ui calendar" id="dateOfWithdrawal">
                     <div class="ui input left icon">
                         <i class="time icon"></i>
                         <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
@@ -96,26 +106,18 @@
         <div class="ui grid">
             <div class="three wide column ui right aligned"><label>เดินทางจาก</label></div>
             <div class="three wide column ui right aligned">
-            <select class="ui dropdown" id="goFrom" name="goFrom">
-                <option value="">สนง. - บ้าน</option>
+            <select class="ui dropdown" id="travelFrom" name="travelFrom">
+                <option value="">เลือก</option>
                 <option value="1">บ้าน - สนง.</option>
-                <option value="2">สนง. - บ้าน</option>
-            </select>
-          </div>
-          <div class="two wide column ui right aligned"><label>กรณีฝึกอบรม</label></div>
-            <div class="three wide column ui right aligned">
-            <select class="ui dropdown"  id="food" name="food">
-                <option value="">ไม่เลี้ยงอาหาร</option>
-                <option value="1">เลี้ยงอาหาร 1 มื้อ </option>
-                <option value="0">เลี้ยงอาหาร 2 มื้อ</option>
-                <option value="0">เลี้ยงอาหาร 3 มื้อ</option>
+                <option value="2">สนง. - สนง.</option>
+                <option value="3">สนง. - บ้าน</option>
             </select>
           </div>
         </div>
         <div class="ui grid">
             <div class="three wide column ui right aligned"><label>วัน เวลา ออกเดินทาง</label></div>
             <div class="three wide column">
-                <div class="ui calendar" id="startGoDate">
+                <div class="ui calendar" id="departureDate">
                     <div class="ui input left icon">
                         <i class="time icon"></i>
                         <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
@@ -124,7 +126,7 @@
             </div>
             <div class="two wide column ui right aligned"><label>วัน เวลา กลับถึง</label></div>
             <div class="three wide column">
-                <div class="ui calendar" id="endGoDate">
+                <div class="ui calendar" id="returnDate">
                     <div class="ui input left icon">
                         <i class="time icon"></i>
                         <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
@@ -133,19 +135,73 @@
             </div>
         </div>
         <div class="ui grid">
+                <div class="three wide column ui right aligned"><label>กรณีฝึกอบรม</label></div>
+                <div class="three wide column">
+                        <select class="ui dropdown" id="trainingCase" name="trainingCase">
+                            <option value="">เลือกกรณีฝึกอบรม</option>
+                            <option *ngFor="let data of trainingCaseDropdown" value="{{data.value}}">{{data.label}}</option> 
+                        </select> 
+                </div>    
+        </div>
+        <div class="ui grid">    
+                <div class="three wide column right aligned"><label>ประเภทการเบิก</label></div>
+                <div class="three wide column">
+                        <select class="ui dropdown" id="withdrawType" name="withdrawType" (change)="trainingRoomTypeDropdownList($evnet)">
+                            <option value="">เลือกประเภทการเบิก</option>
+                            <option *ngFor="let data of withdrawTypeDropdown" value="{{data.value}}">{{data.label}}</option> 
+                        </select> 
+                </div>   
+                  <div class="two wide column right aligned"><label>ประเภทห้องอบรม</label></div>
+                  <div class="three wide column">
+                        <select class="ui dropdown" id="trainingRoomType" name="trainingRoomType">
+                            <option value="">เลือกประเภทห้องอบรม</option>
+                            <option *ngFor="let data of trainingRoomTypeDropdown" value="{{data.value}}">{{data.label}}</option> 
+                        </select> 
+                </div> 
+ 
+        </div>
+        <div class="ui grid">    
+                <div class="three wide column right aligned"><label>กรณีที่พัก</label></div>
+                <div class="three wide column ui right aligned">
+                  <select class="ui dropdown"  id="accommodationCase" name="accommodationCase">
+                      <option value="">เลือกกรณีที่พัก</option>
+                      <option value="1">ปกติ</option>
+                      <option value="2">เหมาจ่าย </option>
+                  </select>
+                </div> 
+                  <div class="two wide column right aligned"><label>ประเภทที่พัก</label></div>
+                  <div class="three wide column ui right aligned">
+                    <select class="ui dropdown"  id="roomType" name="roomType">
+                        <option value="">เลือกประที่พัก</option>
+                        <option value="1">ห้องเดี่ยว</option>
+                        <option value="2">ห้องคู่</option>
+                    </select>
+                  </div>
+        </div>
+        <div class="ui grid">
             <div class="three wide column ui right aligned"><label>จำนวนวันเข้าพัก</label></div>
-            <div class="three wide column"><input id="numberLive" type="text"></div>
-            <div class="two wide column right aligned"><label>ประเภทการเบิก</label></div>
-            <div class="two wide column"><input id="typeWithdrawal" type="text"></div>
-            <div class="two wide column right aligned"><label>ประเภทห้องพัก</label></div>
-            <div class="three wide column"><input id="typeRoom" type="text"></div>
+            <div class="three wide column"><input id="numberOfDate" type="number" [attr.step]="1" required></div>
+        </div>
+        <div class="ui grid">
+            
+        </div>
+        <div class="ui grid">
+            <div class="three wide column right aligned"><label>ค่าพาหนะ</label></div>
+            <div class="three wide column">
+               <input type="number" id="travelExpense" [attr.step]="1" required>
+            </div>
+        
+            <div class="two wide column right aligned"><label>ค่าใช้จ่ายอื่น</label></div>
+            <div class="three wide column">            
+                <input type="number" id="otherExpenses"  [attr.step]="1" required>
+            </div>                
         </div>
         <div class="ui grid">
             <div class="three wide column right aligned"><label>หมายเหตุ</label></div>
             <div class="ten wide column">
             <div class="ui form " style="width: 100%">
                 <div class="field">                
-                  <textarea id="note"></textarea>
+                  <textarea id="remark"></textarea>
                 </div>
               </div>
             </div>
@@ -167,20 +223,18 @@
                       <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                       <th rowspan="2" style="text-align: center !important">ชื่อ</th>
                       <th rowspan="2" style="text-align: center !important">ตำแหน่ง</th>
-                      <th colspan="2" style="text-align: center !important">ค่าเบี้ยเลี้ยง</th>
-                      <th colspan="2" style="text-align: center !important">ค่าเช่าที่พัก</th>             
-                      <th rowspan="2" style="text-align: center !important">ค่าพาหนะ</th>
-                      <th rowspan="2" style="text-align: center !important">ค่าใช้จ่ายอื่น</th>
+                      <th colspan="4" style="text-align: center !important">ค่าใช้จ่าย</th>            
                       <th rowspan="2" style="text-align: center !important">รวมเป็นเงิน</th>
+                      <th rowspan="2" style="text-align: center !important">ลายมือชื่อผู้รับเงิน</th>
+                      <th rowspan="2" style="text-align: center !important">วันที่รับเงิน</th>
                       <th rowspan="2" style="text-align: center !important">หมายเหตุ</th>
                       <th rowspan="2" style="text-align: center !important">Action</th>
-                      
                     </tr>
                     <tr>
-                      <th style="text-align: center !important">วัน</th>
-                      <th style="text-align: center !important">จำนวนเงิน</th>
-                      <th style="text-align: center !important">วัน</th>
-                      <th style="text-align: center !important">จำนวนเงิน</th>
+                      <th style="text-align: center !important">ค่าเบี้ยเลี้ยง</th>
+                      <th style="text-align: center !important">ค่าที่พัก</th>
+                      <th style="text-align: center !important">ค่าพาหนะ</th>
+                      <th style="text-align: center !important">ค่าใช้จ่ายอื่น</th>
                     </tr>
                   </thead>
                   <tfoot>
@@ -196,7 +250,7 @@
                 </tfoot>
                 </table>      
           <div class="ui form center aligned grid">
-              <button class="ui  grey button" type="button" routerLink="/int09/2-1-2" ><i class="reply icon"></i>กลับ</button>
+              <button class="ui  grey button" type="button" routerLink="/int09/2-2-2" ><i class="arrow left icon"></i>กลับ</button>
               <button class="ui  primary button" type="button" ><i class="trash alternate outline icon"></i> ลบ</button>
               <button class="ui  primary button" type="button" (click)="clickFoot()"><i class="save outline icon"></i> บันทึก</button>
               <button class="ui  primary button" type="button" ><i class="external alternate icon"></i>Export</button>
