--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
@@ -26,7 +26,7 @@
             <tr>
 
               <th>ที่</th>
-              <th>ชื่อกระดาษทำการ</th>
+              <th>ปัจจัยเสี่ยง</th>
 
               <th>ปีงบประมาณ</th>
               <th>วันที่สร้าง</th>
