--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
@@ -56,7 +56,7 @@
               <label>ชื่อระบบสารสนเทศ</label>
             </div>
             <div class="four wide field ">
-              <input type="text" placeholder="ชื่อระบบสารสนเทศ" class="custom" name="riskAssInfOtherName" id="riskAssInfOtherName" [(ngModel)]="riskAssInfOtherName" >
+              <input type="text" placeholder="ชื่อระบบสารสนเทศ" class="custom" name="infName" id="infName" [(ngModel)]="infName" >
             </div>
             <div class="two wide field ">
               <label>ค่าความเสี่ยง</label>
