--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
@@ -17,7 +17,15 @@
 
         </div>
        
-        <div style="overflow-x: scroll;">
+        <table id="dataTable" class="ui small celled table">
+          <thead id="trColumn">
+          </thead>
+          <tbody id="tbody">
+          </tbody>
+        </table>
+  
+
+        <!-- <div style="overflow-x: scroll;">
           <table id="dataTable"  class="ui small celled table" style="width: 140%;">
             <thead>
               <tr>
@@ -36,7 +44,10 @@
               </tr>
             </thead>
           </table>
-        </div>
+        </div> -->
+
+
+
         <div class="inline fields"></div>
         <div class="inline fields ">
           <div class="sixteen wide field ">
